# dog

./: .coverage  .env  .env.test  .gitignore  .markdownlint.json  611c94f8a039_llmmodel_and_llmprovider_adjusted_for_.py  CLAUDE.md  README.md  SECURITY.md  agent-registry.skill  copy.env.txt  data-set-loading.md  deployment.md  development.md  docker-compose.local-http.yml  docker-compose.override.yml  docker-compose.traefik.local.yml  docker-compose.traefik.yml  docker-compose.yml  docker-notes.md  dog-openapi.json  dog-stack-architecture.html  event-sourcing.skill  infer-model.md  openapi.json  output.txt  package-lock.json  runlog.txt  test_results_carroll_disamis.json  test_results_room_unit_tests.json
tesser/: .dockerignore  .gitignore  AGENT.md  Dockerfile  README.md  TESSER_SCRIPT_REFERENCE.md  docker-compose.yml  makefile  pyproject.toml
tesser/docs/: _quarto.yml  advanced_tesserax_summary.md  animations.qmd  core.qmd  gallery.qmd  index.qmd  layout.qmd  physics.qmd  tesserax_guide.md
tesser/docs-other/: physics_event_hooks_rfc.md
tesser/docs/history/: completed-api_migration_backlog.md
tesser/docs/plans/: 2026-03-19-script-format-filtering-plan.md  2026-03-19-svg-compose-tesser-integration.md  svg_capability_inventory.md  svg_interface_spec_mvp.md  svg_steel_thread_interface_assessment.md  tesserax_capability_clarity_roadmap.md
tesser/examples-other/: dataset_storyboard_scope.md  examples_reference.md  where-we-goin.md
tesser/scripts/: redis_worker.py  run_tesser_services.sh
tesser/tests/: test_animation_physics_overlay_events.py  test_basics.py  test_core.py  test_dataset_storyboard_regression.py  test_design_patterns_gallery_presets.py  test_design_patterns_gallery_regression.py  test_layouts.py  test_normalized_export.py  test_parameter_parity_gate.py  test_parameter_toggle_regressions.py  test_params.py  test_physics.py  test_physics_event_contract.py  test_physics_events.py  test_render.py  test_svg_compose.py  test_tesserax_service_jobs.py
(+2997 files in other folders)
