[project]
name = "tesserax"
version = "0.9.2"
description = "A pure-Python library for rendering professional CS graphics."
readme = "README.md"
authors = [
    { name = "Alejandro Piad", email = "apiad@apiad.net" }
]
requires-python = ">=3.12"

[project.scripts]
tesserax-api = "tesserax_service.api:main"
tesserax-worker = "tesserax_service.worker:main"
tesserax-cli = "tesserax_service.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tesserax", "src/tesserax_service"]

[project.optional-dependencies]
export = [
    "imageio[ffmpeg]>=2.37.2",
    "cairosvg>=2.8.2",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ipython>=9.9.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "pytest-coverage>=0.0",
    "ruff>=0.14.14",
]
